fix: not showing the first column (content cropped & no scrolling)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,3 +5,6 @@
 :root {
   font-size: 12px;
 }
+body {
+  position: absolute;
+}
